2006-09-12  Johan Dahlin  <jdahlin@async.com.br>

	* kiwi/python.py (enum): Add a new data type

	* tests/test_python.py (EnumTest): and a test

2006-09-09  Gustavo J. A. M. Carneiro  <gjc@gnome.org>

	* tests/test_tasklet.py: Add WaitForCall test.

	* kiwi/tasklet.py (WaitForCall): Add a new WaitForCall wait
	condition, for waiting for a generic callback.

	* tests/test_tasklet.py: Add a few more tests.

	* kiwi/tasklet.py (Tasklet): Better handling of the StopIteration
	exception from tasklets.  Add a new STATE_ZOMBIE state to indicate
	when a tasklet is finished.  Add a new return_value instance
	variable to hold the (surprise!) return value.  Document the
	public instance	variables and STATE_* constants.
	(Tasklet._next_round): When a tasklet sends a message, set the
	'sender' field of the message to the sending tasklet.

2006-09-11  Johan Dahlin  <jdahlin@async.com.br>

	* kiwi/ui/views.py (_open_glade): Sniff the content of the file and use libglade/gazpacho
	when appropriate. Fall back to gazpacho since dtd has not always been present

2006-09-08  Johan Dahlin  <jdahlin@async.com.br>

	* kiwi/ui/delegates.py:
	* kiwi/ui/gazpacholoader.py:
	* kiwi/ui/libgladeloader.py:
	* kiwi/ui/views.py:
	Kill gladename in views, delegates and glade adaptors

2006-09-05  Johan Dahlin  <jdahlin@async.com.br>

	* kiwi/dist.py (KiwiInstallLib.generate_template): Use a raw
	string here to allow the use of UNC paths on win32, pointed out
	by Aaron Spike.

2006-08-30  Ronaldo Maia  <romaia@async.com.br>

	reviewed by: Johan Dahlin  <jdahlin@async.com.br>

	* kiwi/ui/entry.py: Improve focus selection support for mask in entries.
	Fixes #2787

2006-08-30  Ronaldo Maia  <romaia@async.com.br>

	reviewed by: Johan Dahlin  <jdahlin@async.com.br>

	* kiwi/currency.py:
	* kiwi/datatypes.py:
	* kiwi/enums.py:
	* kiwi/ui/objectlist.py:
	* kiwi/ui/widgets/entry.py: 
	Alignment support for datatypes. Fixes #2786

2006-08-29  Johan Dahlin  <jdahlin@async.com.br>

	* kiwi/enums.py: