@@ -36,6 +36,10 @@ setup(name="kiwi",
                    listfiles('gazpacho-plugin', 'kiwiwidgets.py')),
                   ('share/doc/kiwi',
                    ('AUTHORS', 'ChangeLog', 'NEWS', 'README')),
+                  ('share/doc/kiwi/howto',
+                   listfiles('doc/howto/', '*')),
+                  ('share/doc/kiwi/api',
+                   listfiles('doc/api/', '*')),
                   ],
       scripts=['bin/kiwi-i18n',
                'bin/kiwi-ui-test'],
