@@ -1,3 +1,8 @@
+2006-09-15  Johan Dahlin  <jdahlin@async.com.br>
+
+	* Makefile: add to simplify release process
+	* setup.py: install documentation
+
 2006-09-12  Johan Dahlin  <jdahlin@async.com.br>
 
 	* kiwi/python.py (enum): Add a new data type
